--- a/doc/agile/v1/sprint_backlog_05.org
+++ b/doc/agile/v1/sprint_backlog_05.org
@@ -14,29 +14,30 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2017-09-13 Wed 21:41]
+#+CAPTION: Clock summary at [2017-09-13 Wed 22:53]
 | <75>                                                                        |         |       |       |       |
 | Headline                                                                    | Time    |       |       |     % |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                                                | *38:29* |       |       | 100.0 |
+| *Total time*                                                                | *39:35* |       |       | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                                     | 38:29   |       |       | 100.0 |
-| Active                                                                      |         | 38:29 |       | 100.0 |
+| Stories                                                                     | 39:35   |       |       | 100.0 |
+| Active                                                                      |         | 39:35 |       | 100.0 |
 | COMPLETED Edit release notes for previous sprint                            |         |       |  0:44 |   1.9 |
-| STARTED Sprint and product backlog grooming                                 |         |       |  1:33 |   4.0 |
-| COMPLETED Remove object types in yarn                                       |         |       |  0:52 |   2.3 |
+| STARTED Sprint and product backlog grooming                                 |         |       |  1:33 |   3.9 |
+| COMPLETED Remove object types in yarn                                       |         |       |  0:52 |   2.2 |
 | COMPLETED Clean-up readme                                                   |         |       |  1:15 |   3.2 |
 | COMPLETED Rename transformers to adapters                                   |         |       |  0:28 |   1.2 |
-| COMPLETED Analysis on annotations and profiles                              |         |       |  2:26 |   6.3 |
-| COMPLETED Use namespaced stereotypes                                        |         |       |  1:49 |   4.7 |
+| COMPLETED Analysis on annotations and profiles                              |         |       |  2:26 |   6.1 |
+| COMPLETED Use namespaced stereotypes                                        |         |       |  1:49 |   4.6 |
 | COMPLETED Tailor dogen models                                               |         |       |  0:21 |   0.9 |
-| COMPLETED Rename yarn concepts                                              |         |       |  7:49 |  20.3 |
+| COMPLETED Rename yarn concepts                                              |         |       |  7:49 |  19.7 |
 | COMPLETED Remove extra copying in mapper                                    |         |       |  0:05 |   0.2 |
-| COMPLETED Investigate the JSON break on Northwind model                     |         |       |  0:57 |   2.5 |
+| COMPLETED Investigate the JSON break on Northwind model                     |         |       |  0:57 |   2.4 |
 | COMPLETED Rename ODB parameters                                             |         |       |  0:11 |   0.5 |
 | COMPLETED Investigate usage of origin type                                  |         |       |  0:15 |   0.6 |
-| COMPLETED Improve dumping of models                                         |         |       | 12:59 |  33.7 |
-| STARTED Add canonical archetype support to yarn                             |         |       |  6:45 |  17.5 |
+| COMPLETED Improve dumping of models                                         |         |       | 12:59 |  32.8 |
+| COMPLETED Create yarn options                                               |         |       |  1:06 |   2.8 |
+| STARTED Add canonical archetype support to yarn                             |         |       |  6:45 |  17.1 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -671,6 +672,14 @@ Links:
 
 - [[http://www.randygaul.net/2015/06/15/printing-pretty-ascii-trees/][Printing Pretty Ascii Trees]]
 
+*** COMPLETED Create yarn options                                     :story:
+    CLOSED: [2017-09-13 Wed 22:53]
+    CLOCK: [2017-09-13 Wed 21:55]--[2017-09-13 Wed 22:53] =>  0:58
+    CLOCK: [2017-09-13 Wed 21:46]--[2017-09-13 Wed 21:54] =>  0:08
+
+We need to replace the dependency on the options model and create a
+stand alone yarn options class.
+
 *** STARTED Add canonical archetype support to yarn                   :story:
     CLOCK: [2017-09-10 Sun 00:08]--[2017-09-10 Sun 00:18] =>  0:10
     CLOCK: [2017-09-09 Sat 23:40]--[2017-09-10 Sun 00:07] =>  0:27
@@ -772,6 +781,13 @@ Notes:
 
 - make is_enabled private in dependencies builder and see what breaks.
 
+*** Merge knit with yarn                                              :story:
+
+There isn't a lot of reason to have a knit model, really, now that
+yarn has taken over the model to text transforms. We should just move
+housekeeper and the rest of knit into helpers and update the
+code-generator to perform the complete workflow.
+
 *** Transform probe coordinates                                       :story:
 
 Allow users to supply coordinates to transforms in some form so that
@@ -783,14 +799,10 @@ Once probing is in place, we need to remove all the dumps we are doing
 of models at present. These just add size to the log files for no
 reason.
 
+
 *** Move model sorter from helpers                                    :story:
 
 This is really just a sorting transform, not a helper.
-
-*** Create yarn options                                               :story:
-
-We need to replace the dependency on the options model and create a
-stand alone yarn options class.
 
 *** Run "changed" tests only                                          :story:
 
