--- a/doc/agile/v1/sprint_backlog_05.org
+++ b/doc/agile/v1/sprint_backlog_05.org
@@ -14,14 +14,14 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2017-09-14 Thu 00:03]
+#+CAPTION: Clock summary at [2017-09-14 Thu 06:30]
 | <75>                                                                        |         |       |       |       |
 | Headline                                                                    | Time    |       |       |     % |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                                                | *40:39* |       |       | 100.0 |
+| *Total time*                                                                | *40:48* |       |       | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                                     | 40:39   |       |       | 100.0 |
-| Active                                                                      |         | 40:39 |       | 100.0 |
+| Stories                                                                     | 40:48   |       |       | 100.0 |
+| Active                                                                      |         | 40:48 |       | 100.0 |
 | COMPLETED Edit release notes for previous sprint                            |         |       |  0:44 |   1.8 |
 | STARTED Sprint and product backlog grooming                                 |         |       |  1:33 |   3.8 |
 | COMPLETED Remove object types in yarn                                       |         |       |  0:52 |   2.1 |
@@ -33,12 +33,12 @@
 | COMPLETED Rename yarn concepts                                              |         |       |  7:49 |  19.2 |
 | COMPLETED Remove extra copying in mapper                                    |         |       |  0:05 |   0.2 |
 | COMPLETED Investigate the JSON break on Northwind model                     |         |       |  0:57 |   2.3 |
-| COMPLETED Rename ODB parameters                                             |         |       |  0:11 |   0.5 |
+| COMPLETED Rename ODB parameters                                             |         |       |  0:11 |   0.4 |
 | COMPLETED Investigate usage of origin type                                  |         |       |  0:15 |   0.6 |
-| COMPLETED Improve dumping of models                                         |         |       | 12:59 |  31.9 |
+| COMPLETED Improve dumping of models                                         |         |       | 12:59 |  31.8 |
 | COMPLETED Create yarn options                                               |         |       |  1:06 |   2.7 |
-| COMPLETED Merge knit with yarn                                              |         |       |  1:04 |   2.6 |
-| STARTED Add canonical archetype support to yarn                             |         |       |  6:45 |  16.6 |
+| COMPLETED Merge knit with yarn                                              |         |       |  1:13 |   3.0 |
+| STARTED Add canonical archetype support to yarn                             |         |       |  6:45 |  16.5 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -683,6 +683,7 @@ stand alone yarn options class.
 
 *** COMPLETED Merge knit with yarn                                    :story:
     CLOSED: [2017-09-13 Wed 23:31]
+    CLOCK: [2017-09-14 Thu 06:21]--[2017-09-14 Thu 06:30] =>  0:09
     CLOCK: [2017-09-13 Wed 23:56]--[2017-09-14 Thu 00:03] =>  0:07
     CLOCK: [2017-09-13 Wed 23:32]--[2017-09-13 Wed 23:55] =>  0:23
     CLOCK: [2017-09-13 Wed 23:24]--[2017-09-13 Wed 23:31] =>  0:07
